[package]
name = "serienstream-dl"
version = "0.1.0"
description = "A cli tool to download series from s.to (serienstream.to)"
authors = ["fludixx <fludixs@protonmail.com>"]
edition = "2018"

[dependencies]
regex = "1.3.1"
reqwest = "0.9.24"
clap = "2.33.0"
serde_json = "1.0.44"
md5 = "0.7.0"
rand = "0.7.2"