[package]
name = "serienstream-dl"
version = "0.1.0"
description = "A cli tool to download series from s.to (serienstream.to)"
authors = ["fludixx <fludixs@protonmail.com>"]
edition = "2018"

[target.x86_64-pc-windows-gnu]
linker = "/usr/bin/x86_64-w64-mingw32-gcc"
ar = "/usr/x86_64-w64-mingw32/bin/ar"

[dependencies]
regex = "1.3.1"
reqwest = "0.9.24"
clap = "2.33.0"
serde_json = "1.0.44"
md5 = "0.7.0"
rand = "0.7.2"